FEAT: 채팅방 조회 기능 추가
